--- a/index.html
+++ b/index.html
@@ -15,7 +15,19 @@
     <div class="main-flex-container">
     <!-- Top side -->
     <div class="top-side">
-      
+      <div></div>
+      <div class="weather-box">
+        <span class="city-name-box"><span class="weather-left"><img src="./images/weather/cloud.png" class="weather-img"><h1 class="temperature">12</h1></span>
+        <span class="weather-right"><h1 class="city-name">Kraków</h1></span></span>
+        <span class="data-box">
+        <span class="data-item"><img src="./images/weather/pressure3.png"><p class="pressure">1120 hPa</p></span>
+        <span class="data-item"><img src="./images/weather/windy (1).png"><p class="wind-speed">200 km/h</p></span>
+        <span class="data-item"><img src="./images/weather/sunrise.png"><p class="sunrise">06:12</p></span>
+        <span class="data-item"><img src="./images/weather/sunset.png"><p class="sunset">17:22</p></span>
+      </span>
+
+      </div>
+      <div class="btn-box">
       <button class="btn plus-btn">
         <i class="fa-solid fa-square-plus fa-2xl"></i>
       </button>
@@ -28,6 +40,7 @@
       <button class="btn menu-btn">
         <i class="fa-solid fa-list fa-2xl open-todo-btn"></i>
       </button>
+    </div>
     </div>
     <!-- Add new window box -->
     <div class="set-window-container">
@@ -105,6 +118,7 @@
 
 
 <!-- <a href="https://www.flaticon.com/free-icons/google" title="google icons">Google icons created by Ruslan Babkin - Flaticon</a> -->
+<script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
 <script src="script.js"></script>  
 </body>
   
