--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="top-side">
       <div></div>
       <div class="weather-box">
-        <span class="city-name-box"><span class="weather-left"><img src="./images/weather/cloud.png" class="weather-img"><h1 class="temperature">12</h1></span>
+        <span class="city-name-box"><span class="weather-left"><img src="./images/weather/cloudy_day.png" class="weather-img"><h1 class="temperature">12</h1></span>
         <span class="weather-right"><h1 class="city-name">Kraków </h1><i class="fa-solid fa-caret-down data-box-popup"></i></span></span>
         <span class="data-box">
         <span class="data-item"><img src="./images/weather/pressure3.png"><p class="pressure">1120 hPa</p></span>
