--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 </div>
 
 
-<!-- <a href="https://www.flaticon.com/free-icons/google" title="google icons">Google icons created by Ruslan Babkin - Flaticon</a> -->
+<!-- a<a href="https://www.flaticon.com/free-icons/google" title="google icons">Google icons created by Ruslan Babkin - Flaticon</a> -->
 <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
 <script src="script.js"></script>  
 </body>
