--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
     <div class="top-side">
       <div></div>
       <div class="weather-box">
-        <span class="city-name-box"><span class="weather-left"><img src="./images/weather/cloudy_day.png" class="weather-img"><h1 class="temperature">12</h1></span>
-        <span class="weather-right"><h1 class="city-name">Kraków </h1><i class="fa-solid fa-caret-down data-box-popup"></i></span></span>
+        <span class="city-name-box"><span class="weather-left"><img src="./images/weather/cloudy_day.png" class="weather-img"><h1 class="temperature"></h1></span>
+        <span class="weather-right"><h1 class="city-name"></h1><i class="fa-solid fa-caret-down data-box-popup"></i></span></span>
         <span class="data-box">
-        <span class="data-item"><img src="./images/weather/pressure3.png"><p class="pressure">1120 hPa</p></span>
-        <span class="data-item"><img src="./images/weather/windy (1).png"><p class="wind-speed">200 km/h</p></span>
-        <span class="data-item"><img src="./images/weather/sunrise.png"><p class="sunrise">06:12</p></span>
-        <span class="data-item"><img src="./images/weather/sunset.png"><p class="sunset">17:22</p></span>
+        <span class="data-item"><img src="./images/weather/pressure3.png"><p class="pressure"></p></span>
+        <span class="data-item"><img src="./images/weather/windy (1).png"><p class="wind-speed"></p></span>
+        <span class="data-item"><img src="./images/weather/sunrise.png"><p class="sunrise"></p></span>
+        <span class="data-item"><img src="./images/weather/sunset.png"><p class="sunset"></p></span>
       </span>
 
       </div>
